--- a/public/index.html
+++ b/public/index.html
@@ -1,61 +1,54 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="en">
+
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>Welcome to ChipTrack</title>
-        <link rel="stylesheet" href="css/demo.css" type="text/css" media="screen">
-        <link rel="stylesheet" href="css/demo-print.css" type="text/css" media="print">
-        <script src="js/raphael.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" charset="utf-8">
-	function pausecomp(ms) {
-	ms += new Date().getTime();
-	while (new Date() < ms){}
-	} 
-            window.onload = function () {
-                var r = Raphael("holder", 800, 600);
-                var targets = r.set();
-                targets.push(r.circle(250, 200, 20),
-                   r.circle(250, 300, 20),
-                   r.circle(250, 400, 20));
-                targets.attr({fill: "#000", stroke: "#fff", "stroke-dasharray": "- ", opacity: .2});
-                var labels = r.set();
-                labels.push(r.text(250, 100, "WELCOME TO CHIPTRACK"),
-
-	    r.text(280, 200, "Create Room"),
-                            r.text(280, 300, "Join Room"),
-                            r.text(280, 400, "Info"));
-                labels.attr({font: "12px Fontin-Sans, Arial", fill: "#fff", "text-anchor": "start"});
-                var movers = r.set();
-                movers.push(r.circle(250, 200, 20),
-                            r.circle(250, 300, 20),
-                            r.circle(250, 400, 20));
-                movers.attr({fill: "#000", stroke: "#fff", "fill-opacity": 0});
-                movers[0].click(function () {
-                    this.cx = this.cx || 250;
-                    this.animate({cx: this.cx, "stroke-width": this.cx / 100, fill: this.cx ? "hsb(0, .75, .75)" : "#000", "fill-opacity": +!!(this.cx)}, 1000, "elastic");
-                    this.cx = this.cx == 250 ? 250 : 250;
-
-                    // WRITE ROOM REDIRECT HERE
-                });
-                movers[1].click(function () {
-                    this.cx = this.cx || 250;
-                    this.animate({cx: this.cx, "stroke-width": this.cx / 100, fill: this.cx ? "hsb(.2, .75, .75)" : "#000", "fill-opacity": +!!(this.cx)}, 1000, "elastic");
-                    this.cx = this.cx == 250 ? 250 : 250;
-	pausecomp(600)
-	window.location.href='join.html';
-                });
-                movers[2].click(function () {
-                    this.cx = this.cx || 250;
-                    this.animate({cx: this.cx, "stroke-width": this.cx / 100, fill: this.cx ? "hsb(.4, .75, .75)" : "#000", "fill-opacity": +!!(this.cx)}, 1000, "elastic");
-                    this.cx = this.cx == 250 ? 250 : 250;
-	pausecomp(600)
-	window.location.href='help.html';
-                });
-            };
-        </script>
+        <meta charset="utf-8"/>
     </head>
-   <body>
-        <div id="holder"></div>
+
+    <body>
+
+        <div id="gameArea">
+            <!-- MAIN CONTENT AREA WHERE TEMPLATES WILL BE LOADED -->
+        </div>
+
+        <script id="splash" type="text/template">
+        </script>
+
+        <script id="main-menu-template" type="text/template">
+            <!-- Put Buttons and Stuff Here! -->
+            <div class=
+        </script>
+
+        <!-- Dialog when user clicks "Create Game" at the Main Menu -->
+        <script id="create-game-template" type="text/template">
+        
+        </script>
+
+        <!-- Dialog when user clicks "Join Game" at the Main Menu -->
+        <script id="join-game-template" type="text/template">
+
+        </script>
+
+        <!-- Main game screen, shows poker chips. -->
+        <script id="game" type="text/template">
+
+        </script>
+
     </body>
+
+    <!-- JAVASCRIPT LIBRARIES -->
+
+    <!-- jQuery -->
+    <script src="libs/jquery-2.1.1.min.js"></script>
+
+    <!-- FastClick -->
+    <script src="libs/fastclick.js"></script>
+
+    <!-- Socket.IO -->
+    <script src="/socket.io/socket.io.js"></script>
+
+    <!-- app.js -->
+    <script src="app.js"></script>
+
+
 </html>
